<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration" >

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/allerta"
        android:text="@string/sign_up"
        android:textColor="@color/blue"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/heading"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/curvature2"
        android:fontFamily="@font/acme"
        android:hint="@string/first_name"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textColorHint="@color/blue" />

    <EditText
        android:id="@+id/lname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/fname"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/curvature2"
        android:fontFamily="@font/aldrich"
        android:hint="@string/last_name"
        android:paddingStart="10dp"
        android:textColorHint="@color/blue" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/lname"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/curvature2"
        android:fontFamily="@font/aladin"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:drawableRight="@drawable/baseline_email_24"
        android:textColorHint="@color/blue" />

    <EditText
        android:id="@+id/pword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/email"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="70dp"
        android:inputType="text"
        android:password="true"
        android:fontFamily="@font/acme"
        android:hint="@string/password"
        android:textColorHint="@color/blue"
        android:background="@drawable/curvature2"
        android:paddingLeft="10dp"
        tools:ignore="Deprecated" />

    <Button
        android:id="@+id/signup"
        android:layout_width    ="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:layout_alignTop="@+id/pword"
        android:layout_marginTop="90dp"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/signin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/signup"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/aladin"
        android:text="@string/already_have_an_account_sign_in"
        android:onClick="login"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/thanks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/signin1"
        android:visibility="gone"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/aladin"
        android:text="thanks"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="15sp" />



</RelativeLayout>