<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <View
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/mybg"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topView"
        android:layout_marginHorizontal="25dp"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_marginTop="-30dp"
        android:layout_marginBottom="20dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="170dp"
            app:cardCornerRadius="15dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center"
            app:cardElevation="12dp"
            android:layout_marginBottom="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:onClick="student">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_student"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/students"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/blue"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="170dp"
            app:cardCornerRadius="15dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center"
            app:cardElevation="12dp"
            android:layout_marginBottom="20dp"
            android:onClick="teacher"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_teacher"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teachers"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/blue"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="170dp"
            app:cardCornerRadius="15dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/courses"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:onClick="course"
                    android:src="@drawable/ic_courses"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/courses"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textColor="@color/blue"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="170dp"
            app:cardCornerRadius="15dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="center"
            app:cardElevation="12dp"
            android:onClick="admin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_admin"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/admins"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textColor="@color/blue"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DASHBOARD"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/rye"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:layout_alignParentRight="true"
        android:onClick="logout"
        android:fontFamily="@font/aladin"
        android:textSize="18sp"/>



</RelativeLayout>